# practical-data-engineering-2026

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
dagster_home/: dagster.yaml
dashboard/: app.py
data/fixtures/: listings_sample.html
src/re_pipeline/: config.py  definitions.py  iceberg_utils.py  seed.py
src/re_pipeline/assets/: __init__.py  bronze.py  gold.py  silver.py
src/re_pipeline/sources/: real_estate.py
